# permafrost

./: .env.example  .gitignore  CHANGELOG.md  DEMO.md  README.md  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml  pages.yml
docs/: BENCH.md  friction-log.md
docs/proof/: DEPLOY_PROOF.md
edge/: wiring.md
infra/fc/: PROOF.md  handler.py  s.yaml  wsgi.py
scripts/: bench.py  check_submission_readiness.py  verify_offline.py
seeds/: compressor_drift.csv  compressor_drift.expected.json  defrost_cycle.csv  defrost_cycle.expected.json  door_ajar.csv  door_ajar.expected.json  fridge.json  power_loss.csv  power_loss.expected.json  seed.py
site/: CNAME  index.html
site/pitch/: index.html
src/permafrost/: __init__.py  actions.py  benchmark.py  canonical.py  chain.py  cli.py  crypto.py  daemon.py  features.py  link.py  replay.py  reporting.py  rules.py  sampler.py  storage.py  timeutil.py  verdict.py
src/permafrost/cloud/: __init__.py  app.py  diagnose.py  distill.py  guidance.py  guidance_corpus.json  report.py  tools.py
src/permafrost/data/: rules_v1.json
src/permafrost/qwen/: __init__.py  fake.py  transport.py
tests/: conftest.py  helpers.py  test_actions.py  test_app.py  test_canonical.py  test_chain.py  test_cli.py  test_crypto.py  test_daemon.py  test_diagnose.py  test_distill.py  test_features.py  test_invariants.py  test_link.py  test_offline.py  test_replay.py  test_report.py  test_rules.py  test_sampler.py  test_storage.py  test_timeutil.py  test_transport.py  test_verdict.py
