[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "permafrost-edge"
version = "1.1.0"
description = "A $60 edge guardian for clinic vaccine fridges: local reflexes in milliseconds, cloud Qwen diagnosis with CDC-style citations, and a tamper-evident hash-chained cold-chain log."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Edy Cu" }]
keywords = ["edge", "cold-chain", "vaccine", "iot", "qwen", "hash-chain", "raspberry-pi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "typer>=0.16",
    "pynacl>=1.5",
    "pydantic>=2.7",
    "fastapi>=0.111",
    "httpx>=0.27",
    "openai>=1.40",
    "uvicorn>=0.30",
    "rich>=13.7",
]

[project.optional-dependencies]
release = ["python-semantic-release>=9,<11"]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.15",
    "mypy>=1.11",
    "pip-audit>=2.7",
]
hardware = [
    # Installed on the Pi only; imports are guarded — replay mode never needs these.
    "w1thermsensor>=2.3 ; platform_machine in 'armv7l aarch64'",
    "gpiozero>=2.0 ; platform_machine in 'armv7l aarch64'",
]

[project.scripts]
permafrost = "permafrost.cli:app"

[project.urls]
Homepage = "https://github.com/edycutjong/permafrost"

[tool.hatch.build.targets.wheel]
packages = ["src/permafrost"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "out", "seeds"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = ["\\.venv", "out/"]

# ---------------------------------------------------------------------------
# Automatic semantic versioning, driven by Conventional Commits in THIS repo.
# This build/ folder is its own isolated git repo (no remote, not the monorepo).
#   fix:  -> patch   feat: -> minor   feat!/BREAKING CHANGE: -> major
# Bump locally with:  ./.venv/bin/semantic-release version
# (config is local-only: it commits + tags in this repo but never pushes.)
# ---------------------------------------------------------------------------
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/permafrost/__init__.py:__version__"]
tag_format = "v{version}"
commit_message = "chore(release): {version} [skip ci]"
allow_zero_version = true
major_on_zero = false
build_command = ""

[tool.semantic_release.branches.main]
match = "(main|master)"

[tool.semantic_release.publish]
upload_to_vcs_release = false
